--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8">    
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+  <!-- <link type="text/css" rel="stylesheet" href="style.css"  media="screen,projection"/> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MarilyneAngular</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>  
+  <app-root></app-root>   
 </body>
 </html>
