récupération avatar depuis serveur + snackbar de connexion

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">    
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' img-src *;"> -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- <link type="text/css" rel="stylesheet" href="style.css"  media="screen,projection"/> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
