--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">    
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' img-src *;"> -->
+  <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- <link type="text/css" rel="stylesheet" href="style.css"  media="screen,projection"/> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -13,5 +12,6 @@
 </head>
 <body>
   <app-root></app-root>   
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
 </body>
 </html>
